--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "cors": "^2.8.5",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
+    "firebase": "^9.17.2",
     "nodemailer": "^6.9.1",
     "nodemon": "^2.0.20"
   },
